<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="BACK" />

    <ListView
        android:id="@+id/data_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/back" />

</RelativeLayout>